--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/material": "^7.3.1",
+    "@fontsource/roboto": "^5.2.6",
     "@mui/styled-engine-sc": "^7.3.1",
+    "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
-    "styled-components": "^6.1.19"
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
